--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.mycompany</groupId>
     <artifactId>MavenWebProject</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.1-SNAPSHOT</version>
     <packaging>war</packaging>
 
     <name>MavenWebProject</name>
@@ -20,6 +20,11 @@
             <artifactId>javaee-web-api</artifactId>
             <version>7.0</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>jstl</groupId>
+            <artifactId>jstl</artifactId>
+            <version>1.2</version>
         </dependency>
     </dependencies>
 
@@ -51,6 +56,7 @@
                 <version>2.6</version>
                 <executions>
                     <execution>
+                        <id>validade-copy</id>
                         <phase>validate</phase>
                         <goals>
                             <goal>copy</goal>
@@ -68,14 +74,8 @@
                             </artifactItems>
                         </configuration>
                     </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-dependency-plugin</artifactId>
-                <version>2.6</version>
-                <executions>
                     <execution>
+                        <id>package-copy</id>
                         <phase>package</phase>
                         <goals>
                             <goal>copy</goal>
@@ -86,7 +86,7 @@
                                     <groupId>com.github.jsimone</groupId>
                                     <artifactId>webapp-runner</artifactId>
                                     <version>9.0.27.1</version>
-									<destFileName>webapp-runner.jar</destFileName>
+                                    <destFileName>webapp-runner.jar</destFileName>
                                     <type>jar</type>
                                 </artifactItem>
                             </artifactItems>
